--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.0"
+        "symfony/twig-bundle": "^4.0",
+        "symfony/yaml": "^4.0",
+        "twbs/bootstrap": "4.0.0-beta.2"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
