--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0",
-        "twbs/bootstrap": "4.0.0-beta.2"
+        "twbs/bootstrap": "v4.0.0-beta.2"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
