--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/security-csrf": "^4.0",
+        "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
         "symfony/yaml": "^4.0",
         "twbs/bootstrap": "v4.0.0-beta.2"
     },
