--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/orm-pack": "^1.0",
         "symfony/security-csrf": "^4.0",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
