--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,6 +2,7 @@ framework:
     secret: '%env(APP_SECRET)%'
     default_locale: en
     csrf_protection: { enabled: true }
+    validation: { enable_annotations: true }
     #http_method_override: true
 
     # uncomment this entire section to enable sessions
