--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
-        "symfony/security-csrf": "^4.0",
+        "symfony/security": "^4.0",
+        "symfony/security-bundle": "^4.0",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
