--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,6 +8,15 @@ security:
             security: false
         main:
             anonymous: ~
+            oauth:
+                resource_owners:
+                    google:             "/login/check-google"
+                login_path:        /login
+                use_forward:       false
+                failure_path:      /login
+
+                oauth_user_provider:
+                    service: hwi_oauth.user.provider
 
             # activate different ways to authenticate
 
