--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -13,3 +13,6 @@ hwi_oauth_connect:
 hwi_oauth_login:
     resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
     prefix:   /login
+
+google_login:
+    path: /login/check-google
