--- a/config/packages/hwioauth.yaml
+++ b/config/packages/hwioauth.yaml
@@ -1,6 +1,6 @@
 hwi_oauth:
     # list of names of the firewalls in which this bundle is active, this setting MUST be set
-    firewall_names: [main]
+    firewall_names: [secured_area]
 
     # an optional setting to configure a query string parameter which can be used to redirect
     # the user after authentication, e.g. /connect/facebook?_destination=/my/destination will
@@ -18,10 +18,3 @@ hwi_oauth:
 
     # here you will add one (or more) configurations for resource owners
     # and other settings you want to adjust in this bundle, just checkout the list below!
-
-    resource_owners:
-        app:
-            type:                google
-            client_id:           '%env(GOOGLE_OAUTH_CLIENT_ID)%'
-            client_secret:       '%env(GOOGLE_OAUTH_CLIENT_SECRET)%'
-            scope:               "email profile"
