--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,11 +1,19 @@
 security:
     # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        in_memory:
+            memory:
+                users:
+                    admin: #htaccess user
+                        password: $2y$12$7a/FFgwjQPrK5hq9LrJKSeR5cc62LkxQMXDh/ZM7GopAo2ukfwDgu
+                        roles: 'ROLE_USER'
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        testing:
+            host: ^villadbay\.my\.webhop\.info$
+            http_basic: ~
         main:
             anonymous: ~
 
@@ -16,3 +24,8 @@ security:
 
             # form_login: ~
             # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+    encoders:
+        Symfony\Component\Security\Core\User\User:
+            algorithm: bcrypt
+            cost: 12
