--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 composer.phar
 vendor/ocramius/package-versions/src/PackageVersions/Versions.php
 vendor/autoload.php
+vendor/composer/autoload_real.php
 
 ###> symfony/framework-bundle ###
 .env
