--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ composer.phar
 vendor/ocramius/package-versions/src/PackageVersions/Versions.php
 vendor/autoload.php
 vendor/composer/autoload_real.php
+vendor/composer/autoload_static.php
 
 ###> symfony/framework-bundle ###
 .env
