--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,17 @@
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
-        "symfony/var-dumper": "^4.0",
         "symfony/yaml": "^4.0",
         "twbs/bootstrap": "v4.0.0-beta.2"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/thanks": "^1.0"
+        "symfony/thanks": "^1.0",
+        "symfony/debug-bundle": "^v4.0",
+        "squizlabs/php_codesniffer": "3.3.0",
+        "phpmd/phpmd": "2.6.0",
+        "symfony/var-dumper": "^4.0"
     },
     "config": {
         "preferred-install": {
