--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
-        "symfony/yaml": "^4.0",
-        "twbs/bootstrap": "v4.0.0-beta.2"
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
