--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,25 +1,26 @@
 security:
     # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory:
-                users:
-                    admin: #htaccess user
-                        password: $2y$12$7a/FFgwjQPrK5hq9LrJKSeR5cc62LkxQMXDh/ZM7GopAo2ukfwDgu
-                        roles: 'ROLE_GUEST'
-                    sales@villadbay.com:
-                        password: $2y$12$OMQ1JArciGsJ97V0DwTydeNi84rBI2/GQlRzocC5IO7bOoC0LPLFG
-                        roles: 'ROLE_ADMIN'
-                    hosting@marksmith.email:
-                        password: $2y$12$cVWcJnVdMPCoHWOgel4hc.uOvEE71yFxH1VMsutbqQiKyX8chnBwu
-                        roles: 'ROLE_SUPERADMIN'
+        webservice:
+            id: App\Security\User\WebserviceUserProvider
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        login:
+            pattern: ^/login
+            anonymous: ~
+        admin_login:
+            pattern: ^/admin/login
+            anonymous: ~
+        admin:
+            pattern: ^/admin
+            form_login:
+                login_path: /admin/login
+                check_path: /admin/login_check
         development:
             host: ^dev\.villadbay\.com$
-            http_basic: ~
+            form_login: ~
         staging:
             host: ^staging\.villadbay\.com$
             http_basic: ~
@@ -36,16 +37,13 @@ security:
 
             # form_login: ~
             # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
-
-            pattern: ^/admin/
-            http_basic: ~
     encoders:
         Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
             cost: 12
     access_control:
         # require ROLE_SUPERADMIN for dev domain
-        - { path: ^/, roles: ROLE_SUPERADMIN, host: ^dev\.villadbay\.com$}
+        - { path: ^/admin, roles: ROLE_SUPERADMIN, host: ^dev\.villadbay\.com$}
         # require ROLE_ADMIN for dev domain
         - { path: ^/, roles: ROLE_ADMIN, host: ^staging\.villadbay\.com$}
         - { path: ^/, roles: ROLE_ADMIN, host: ^preprod\.villadbay\.com$}
