--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "ext-imagick": "*",
         "aws/aws-sdk-php": "^3.52",
+        "google/auth": "^1.4",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
