--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,9 @@
 # This file is a "template" of which env vars need to be defined for your application
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+APP_DEBUG=
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -13,5 +16,5 @@ APP_SECRET=0d8e23ab3197029b6e6982fb8f28c493
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:password@db:3306/database_name
 ###< doctrine/doctrine-bundle ###
