--- a/config/services_dev.yaml
+++ b/config/services_dev.yaml
@@ -1,4 +1,4 @@
 parameters:
     app.aws.imagecdn: 'https://d1dkx0epoz0ees.cloudfront.net'
-    app.aws.s3.bucket: 'villadbay'
+    app.aws.s3.bucket: 'villadbay-dev'
 
