Refactored the checking of a logged in user to a UserCheckerInterface

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,7 @@ security:
             logout:
                 path: app_logout
                 success_handler: 'App\Security\LogoutSuccessHandler'
+            user_checker: App\Security\UserChecker
         main:
             anonymous: ~
             guard:
