--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/maker-bundle": "^1.0",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/security": "^4.0",
         "symfony/security-bundle": "^4.0",
