--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
         "ext-iconv": "*",
         "ext-imagick": "*",
         "ext-http": "*",
-        "aws/aws-sdk-php": "^3.52",
         "google/apiclient": "^2.0",
         "sensio/framework-extra-bundle": "^5.0",
+        "skipton-io/base-application": "*"
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/expression-language": "^4.0",
