--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "ext-http": "*",
         "ext-iconv": "*",
         "ext-imagick": "*",
-        "ext-http": "*",
         "google/apiclient": "^2.0",
         "sensio/framework-extra-bundle": "^5.0",
-        "skipton-io/base-application": "*",
+        "skipton-io/base-application": "dev-master",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/expression-language": "^4.0",
@@ -34,6 +34,10 @@
         "phpmd/phpmd": "2.6.0",
         "symfony/var-dumper": "^4.0"
     },
+    "repositories": [
+        {"type": "composer", "url": "https://repo.packagist.com/skipton-io/"},
+        {"packagist.org": false}
+    ],
     "config": {
         "preferred-install": {
             "*": "dist"
