--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
+        
         "skipton-io/base-application": "dev-master"
     },
     "require-dev": {},
@@ -14,5 +15,15 @@
             "*": "dist"
         },
         "sort-packages": true
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
 }
