--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,68 @@
     "type": "project",
     "license": "proprietary",
     "require": {
+        "php": "^7.1.3",
+        "ext-http": "*",
+        "ext-iconv": "*",
+        "ext-imagick": "*",
+        "aws/aws-sdk-php": "^3.52",
+        "google/apiclient": "^2.0",
+        "symfony/asset": "^4.0",
+        "symfony/console": "^4.0",
+        "symfony/expression-language": "^4.0",
+        "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
+        "symfony/framework-bundle": "^4.0",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/monolog-bundle": "^3.3",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security": "^4.0",
+        "symfony/security-bundle": "^4.0",
+        "symfony/translation": "^4.0",
+        "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
+        "symfony/yaml": "^4.0",
+        "sensio/framework-extra-bundle": "^5.0",
         "skipton-io/base-application": "dev-master"
     },
-    "require-dev": {},
+    "require-dev": {
+        "symfony/dotenv": "^4.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/thanks": "^1.0",
+        "symfony/debug-bundle": "^v4.0",
+        "squizlabs/php_codesniffer": "3.3.0",
+        "phpmd/phpmd": "2.6.0",
+        "symfony/var-dumper": "^4.0",
+        "phpspec/phpspec": "^5.1"
+    },
+    "replace": {
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install --symlink --relative %SYMFONY_PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "id": "01C1WBCEBM76QXV77ZB413H3TC",
+            "allow-contrib": false
+        },
+        "symfony-public-dir": "html"
+    },
     "repositories": [
         {"type": "composer", "url": "https://repo.packagist.com/skipton-io/"},
         {"packagist.org": false}
@@ -13,9 +72,13 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "bin-dir": "bin"
     },
     "autoload": {
+        "psr-0": {
+            "": "src"
+        },
         "psr-4": {
             "App\\": "src/"
         }
