--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,6 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
-        "ext-http": "*",
-        "ext-iconv": "*",
-        "ext-imagick": "*",
         "aws/aws-sdk-php": "^3.52",
         "google/apiclient": "^2.0",
         "symfony/asset": "^4.0",
@@ -23,7 +19,8 @@
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
         "symfony/yaml": "^4.0",
-        "sensio/framework-extra-bundle": "^5.0"
+        "sensio/framework-extra-bundle": "^5.0",
+        "skipton-io/base-application": "dev-master"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
@@ -32,8 +29,7 @@
         "symfony/debug-bundle": "^v4.0",
         "squizlabs/php_codesniffer": "3.3.0",
         "phpmd/phpmd": "2.6.0",
-        "symfony/var-dumper": "^4.0",
-        "phpspec/phpspec": "^5.1"
+        "symfony/var-dumper": "^4.0"
     },
     "replace": {
         "symfony/polyfill-iconv": "*",
