--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
     },
     "autoload": {
         "psr-0": {
-            "": "src"
+            "App\\": "src/"
         },
         "psr-4": {
             "App\\": "src/"
