--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,9 +12,7 @@ framework:
     #fragments: ~
     php_errors:
         log: true
-        
+
     cache:
-        pools:
-            cache.annotations:
-                adapter: cache.adapter.redis
-                default_lifetime: 3600
+        default_redis_provider: 'redis://%app.redis.host%:%app.redis.port%/cache'
+        app: cache.adapter.redis
