--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
+            "cache:clear --no-warmup": "symfony-cmd",
             "assets:install --symlink --relative %SYMFONY_PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
