--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ vendor/ocramius/package-versions/src/PackageVersions/Versions.php
 vendor/autoload.php
 vendor/composer/autoload_real.php
 vendor/composer/autoload_static.php
+bin/*
+!bin/console
 
 ###> symfony/framework-bundle ###
 .env
