--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "phpmd/phpmd": "2.6.0",
         "squizlabs/php_codesniffer": "3.3.0",
+        "symfony/browser-kit": "^4.0",
         "symfony/debug-bundle": "^v4.0",
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0",
