[AUTO] Updates to composer installation

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ bin/*
 /public/bundles/
 /var/
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
