--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0",
         "symfony/thanks": "^1.0",
         "symfony/var-dumper": "^4.0"
     },
