--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,12 @@
         "phpmd/phpmd": "2.6.0",	
         "phpspec/phpspec": "^5.1",	
         "squizlabs/php_codesniffer": "3.3.0",	
-        "symfony/browser-kit": "^4.0",	
-        "symfony/debug-bundle": "^v4.0",	
-        "symfony/dotenv": "^4.0",	
-        "symfony/phpunit-bridge": "^4.0",	
+        "symfony/debug-pack": "*",	
+        "symfony/dotenv": "^4.1.*",	
+        "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "^1.0",	
         "symfony/test-pack": "^1.0",	
-        "symfony/thanks": "^1.0",	
-        "symfony/var-dumper": "^4.0"
+        "symfony/web-server-bundle": "4.1.*"
     },
     "replace": {
         "symfony/polyfill-iconv": "*",
